<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.DetailActivity">

    <LinearLayout
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription,UselessParent">

        <ImageView
                android:scaleType="fitCenter"
                android:padding="4dp"
                android:id="@+id/detailIcon"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="210dp"/>

        <LinearLayout
                android:padding="4dp"
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="210dp">

            <TextView
                    android:textColor="@android:color/black"
                    android:text="@string/name_code"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:id="@+id/detailNameVersion"
                    android:text="@string/name_code"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:textColor="@android:color/black"
                    android:text="@string/version_number"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:id="@+id/detailNumberVersion"
                    android:text="@string/name_code"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:textColor="@android:color/black"
                    android:text="@string/release_date"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:id="@+id/detailReleaseDate"
                    android:text="@string/name_code"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:textColor="@android:color/black"
                    android:text="@string/api_level"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:id="@+id/detailApiLevelDate"
                    android:text="@string/name_code"
                    android:textSize="16sp"
                    style="@style/textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:text="@string/new_feature"
            android:textSize="16sp"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_gravity="center_horizontal"
            android:id="@+id/rvFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:text="@string/description"
            android:textSize="16sp"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_margin="8dp"
            android:layout_marginTop="2dp"
            android:id="@+id/detailDescription"
            android:text="@string/name_code"
            android:textSize="16sp"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>